# epm-audit-automation

./: .gitignore  README.md
config/: applications.yaml  environments.yaml
docs/: adversarial-review-2026-03-23.md  artifact-extraction-matrix.md  artifact-updates-report-api.md  audit-extraction-matrix.md  change-classification.md  credential-management.md  fccs_api_endpoints.txt  it-controls-mapping.md  materiality-filter-guide.md  oracle-api-review-summary.md  oracle-api-validation.md  oracle_api_toc.txt  oracle_docs_extracted.txt  oracle_rest_api_reference.txt  skill-pattern.md  sox-control-mapping.md
epm_audit_cli/: README.md  pyproject.toml
epm_audit_cli/docs/: INDEX.md  README.md  configuration.md
epm_audit_cli/epm_audit_cli/: __init__.py  cli.py  exceptions.py
epm_audit_cli/epm_audit_cli/auth/: __init__.py  backend.py  env_backend.py  file_backend.py  keyring_backend.py  manager.py
epm_audit_cli/epm_audit_cli/clients/: __init__.py  base.py  iam.py
epm_audit_cli/epm_audit_cli/commands/: __init__.py  artifact.py  config.py  edm.py  iam.py  login.py  logout.py  oci.py  rules.py
epm_audit_cli/epm_audit_cli/config/: __init__.py  loader.py
epm_audit_cli/epm_audit_cli/output/: __init__.py  csv_fmt.py  json_fmt.py  table.py
epm_audit_cli/epm_audit_cli/templates/: config_template.yaml
retool/: app_config.json
scripts/: README.md  credential_manager.py  extract-artifact-changes.py  extract-epm-admin-audit.py  extract-fccs-audit.py  extract-oci-audit.py  integrated_audit_example.py  materiality_filter.py  test_agent_browser_integration.py
(+14 files in other folders)
